<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc210bgray.carpaymentcalc.MainActivity"
    android:useDefaultMargins="true"
    android:columnCount="2">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|text|numberDecimal"
        android:ems="10"
        android:id="@+id/priceEditText"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:maxLength="8"
        android:digits=".0123456789" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/priceTextView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="0"
        android:hint="@string/enter_price" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/interestEditText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits=".0123456789"
        android:inputType="number|text|numberDecimal"
        android:maxLength="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/interestTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_interest_rate"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/textview_padding" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|text|numberDecimal"
        android:ems="10"
        android:id="@+id/planEditText"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:digits=".0123456789"
        android:maxLength="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/planTextView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:hint="@string/payment_plan_months"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/textview_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/monthly"
        android:id="@+id/monthlyLabelTextView"
        android:hint="@string/monthly"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/monthlyTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total"
        android:id="@+id/totalLabelTextView"
        android:hint="@string/total"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalTextView"
        android:elevation="@dimen/elevation"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/result_background"
        android:padding="@dimen/textview_padding" />
</GridLayout>
